--- a/KeyboardKeyboard/KeyboardKeyboard.csproj
+++ b/KeyboardKeyboard/KeyboardKeyboard.csproj
@@ -52,6 +52,7 @@
     <Compile Include="LogKeys.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringExt.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
